# indi_usbrelay2_roof

./: CMakeLists.txt  COPYING.BSD  INSTALL  README.md  config.h.cmake
cmake_modules/: FindINDI.cmake  FindINDIDriver.cmake  FindNova.cmake  FindUSBRelayDevice.cmake  MacroBoolTo01.cmake  MacroLogFeature.cmake
usbrelay2_roof/: 99-usbrelay2.rules  indi_usbrelay2_roof.xml  usb_interface.cpp  usb_interface.h  usbrelay2_roof.cpp  usbrelay2_roof.h
